			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2793 2005/08/02 06:30:15 suz Exp $

<200508>
2005-08-02  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sys/netinet/igmp.c: fixed a kernel crash due to a 
	  IN_MULTI locking failure.  supports IN_MULTI locking in igmpv3

<200507>
2005-07-29  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/*: 
	- introduced a fine-grain-locking for interface-address list and 
	  in_multi list.
	- use malloc() with M_NOWAIT when joining a multicast group in layer2,
	  drivers.  Error handling routine is also added when malloc() fails.
	  This is to prevent unnecessary locking failure. (e.g. nd-proxy)
	Obtained from: freebsd-net
	ToDo: support it on IGMPv3

2005-07-26  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/{in6_msf.c, in6_var.c, mldv2.c, ip6_output.c}:
	ports some MLDv1 enhancements into MLDv2.
	- use callout timer mechanism for protocol timer
	- impose a random delay (when necessary) according to rfc2462bis

2005-07-26  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/route6d: route6d now does not care about the kernel
	internal form for scoped addresses at all.  In particular, it can
	transparently specify the source of a RIPng response as a gateway
	address through the routing socket.

2005-07-26  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* netbsd/openbsd: applied the same changes for routing sockets as
	those for FreeBSD (see the next entry).

2005-07-23  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/sys/net/rtsock.c: added support for IPv6 scoped
	  addresses for routing sockets:
	- route_output() now accepts IPv6 addresses with non-0
	  sin6_scope_id field and converts those into the kernel internal
	  form.
	- rt_msg[12]() recovers the embedded scope zone ID and set the
	  sin6_scope_id field appropriately.
	* freebsd5/sbin/{ifconfig,route}: got rid of ugly (but still
	incomplete) special cases for IPv6 link-local addresses thanks to
	this change.

2005-07-22  SUZUKI, Shinsuke <suz@kame.net>