@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2793 2005/08/02 06:30:15 suz Exp $
+$KAME: CHANGELOG,v 1.2794 2005/08/10 05:06:45 suz Exp $
 
 <200508>
+2005-08-10  SUZUKI, Shinsuke <suz@kame.net>
+	* kame/sys/netinet6/ip6_mroute.c: fixed a kernel crash at the 
+	  start-up time of an IPv6 multicast program (pim6[sd]d, mfc)
+
 2005-08-02  SUZUKI, Shinsuke <suz@kame.net>
 	* freebsd5/sys/netinet/igmp.c: fixed a kernel crash due to a 
 	  IN_MULTI locking failure.  supports IN_MULTI locking in igmpv3
